<resources>
    <string name="app_name">MyCoin</string>
    <string name="text_placeholder_coin_price">$%s</string>
    <string name="text_hint_email">Email</string>
    <string name="text_hint_username">Username</string>
    <string name="text_hint_password">Password</string>
    <string name="text_btn_register">Register</string>
    <string name="text_btn_login">Login</string>
    <string name="error_email_empty">Email Should be Filled</string>
    <string name="error_password_empty">Password Should be Filled</string>
    <string name="error_username_empty">Username Should be Filled</string>
    <string name="error_email_invalid">Email is Invalid</string>
    <string name="text_create_account">Create an Account</string>
    <string name="text_register_success">Register Success!</string>
    <string name="text_title_toolbar_register">Register Account</string>
    <string name="text_login_success">Login Success !</string>
    <string name="text_title_toolbar_login">Login</string>

    <string name="text_dialog_logout_task_positive">Yes</string>
    <string name="text_dialog_logout_task_negative">No</string>
    <string name="text_icon_menu_logout">Logout</string>
    <string name="text_logout_dialog_title">Logout Profile</string>
    <string name="text_logout_dialog_msg">Do you want to Logout ?</string>
    <string name="text_btn_save_profile">Save Profile</string>
    <string name="text_title_toolbar_profile">Profile</string>
    <string name="text_change_profile_success">Change Profile Success !</string>
    <string name="text_toast_permission_declined">Please grant storage permission to select Image</string>
    <string name="text_btn_logout">Logout</string>
    <string name="text_subtitle_toolbar_list">List of Crypto Coins</string>

</resources>